fixed hero spacing

--- a/chamber/styles/desktop.css
+++ b/chamber/styles/desktop.css
@@ -66,6 +66,7 @@
         grid-area: event;
         padding: 1em;
         margin-left: 1em;
+        margin-top: 0em;
     }
     
     .event img{
@@ -83,6 +84,7 @@
         display: block;
         grid-area: news;
         padding: 1em;
+        margin-top: 2em;
     }
     
     .spotlights{
