--- a/chamber/styles/tablet.css
+++ b/chamber/styles/tablet.css
@@ -22,6 +22,7 @@
         display: block;
         grid-area: event;
         padding: 1em;
+        margin-top: 0em;
     }
     
     .weather{
@@ -33,7 +34,7 @@
     .news{
         display: block;
         grid-area: news;
-        padding: 1em;
+        margin-top: 2em;
     }
     
     .spotlights{
